Enhance mobile interaction with visual feedback and improve accessibility features

--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
         <p class="text-blue-800">• Scroll the seating chart horizontally if needed</p>
       </section>
 
+      <!-- Desktop Usage Instructions -->
+      <section class="hidden lg:block bg-blue-50 border border-blue-200 rounded p-3 text-sm space-y-1 order-3" aria-labelledby="desktop-instructions-heading">
+        <h3 id="desktop-instructions-heading" class="font-medium text-blue-900">🖱️ Desktop Instructions</h3>
+        <p class="text-blue-800">• Drag students from roster to empty seats to assign</p>
+        <p class="text-blue-800">• Drag between seats to swap students</p>
+        <p class="text-blue-800">• Drag to "Unassigned Students" list to remove from seat</p>
+        <p class="text-blue-800">• Click empty seats to pick from a list</p>
+      </section>
+
       <!-- Theme Controls -->
       <section class="no-print space-y-2 order-4" aria-labelledby="theme-heading">
         <h2 id="theme-heading" class="font-semibold">Theme & Print</h2>
