--- a/index.html
+++ b/index.html
@@ -175,6 +175,28 @@
           <div class="text-sm text-slate-600">Last saved: <span id="lastSaved">never</span></div>
         </header>
 
+        <!-- Seating Status Progress Bar -->
+        <div class="no-print bg-blue-50 border border-blue-200 rounded-lg p-3 mb-4">
+          <div class="flex items-center justify-between text-sm mb-2">
+            <div>
+              <span class="font-semibold" id="stats-assigned">0</span> / <span id="stats-total">0</span> seats filled
+            </div>
+            <div class="flex gap-3">
+              <span class="flex items-center gap-1">
+                <span class="w-3 h-3 rounded-full bg-emerald-400"></span>
+                <span class="text-xs">Filled</span>
+              </span>
+              <span class="flex items-center gap-1">
+                <span class="w-3 h-3 rounded-full border-2 border-dashed border-slate-400 bg-slate-50"></span>
+                <span class="text-xs">Empty</span>
+              </span>
+            </div>
+          </div>
+          <div class="h-2 bg-slate-200 rounded-full overflow-hidden">
+            <div id="progress-bar" class="h-full bg-emerald-500 transition-all duration-300" style="width: 0%"></div>
+          </div>
+        </div>
+
         <!-- Seating Chart (table bench layout) -->
         <section id="seating-chart-container" class="bg-white p-2 sm:p-4 rounded shadow-sm print:shadow-none border border-transparent overflow-x-auto" aria-label="Seating chart">
           <div class="min-w-max">
