--- a/index.html
+++ b/index.html
@@ -119,25 +119,29 @@
           </div>
           
           <!-- Print Options -->
-          <div class="bg-slate-50 border border-slate-200 rounded p-2 space-y-1">
-            <h3 class="text-xs font-medium text-slate-700">Print Options</h3>
-            <label class="flex items-center gap-2 text-xs cursor-pointer">
-              <input type="checkbox" id="print-show-bench-numbers" checked class="rounded" />
-              <span>Show bench seat numbers</span>
-            </label>
-            <label class="flex items-center gap-2 text-xs cursor-pointer">
-              <input type="checkbox" id="print-show-row-numbers" checked class="rounded" />
-              <span>Show row numbers</span>
-            </label>
-            <label class="flex items-center gap-2 text-xs cursor-pointer">
-              <input type="checkbox" id="print-show-seat-positions" checked class="rounded" />
-              <span>Show seat positions (Window/Middle/Aisle)</span>
-            </label>
-            <label class="flex items-center gap-2 text-xs cursor-pointer">
-              <input type="checkbox" id="print-show-theme-icons" checked class="rounded" />
-              <span>Show theme icons</span>
-            </label>
-          </div>
+          <details class="bg-slate-50 border border-slate-200 rounded" open>
+            <summary class="cursor-pointer p-2 text-xs font-medium text-slate-700 hover:bg-slate-100 rounded-t select-none">
+              🖨️ Print Options
+            </summary>
+            <div class="p-2 pt-0 space-y-1">
+              <label class="flex items-center gap-2 text-xs cursor-pointer">
+                <input type="checkbox" id="print-show-bench-numbers" checked class="rounded" />
+                <span>Show bench seat numbers</span>
+              </label>
+              <label class="flex items-center gap-2 text-xs cursor-pointer">
+                <input type="checkbox" id="print-show-row-numbers" checked class="rounded" />
+                <span>Show row numbers</span>
+              </label>
+              <label class="flex items-center gap-2 text-xs cursor-pointer">
+                <input type="checkbox" id="print-show-seat-positions" checked class="rounded" />
+                <span>Show seat positions (Window/Middle/Aisle)</span>
+              </label>
+              <label class="flex items-center gap-2 text-xs cursor-pointer">
+                <input type="checkbox" id="print-show-theme-icons" checked class="rounded" />
+                <span>Show theme icons</span>
+              </label>
+            </div>
+          </details>
           
           <div class="flex flex-col gap-2">
             <button class="print-btn bg-emerald-600 text-white rounded px-3 py-2 hover:bg-emerald-500 active:scale-[.99] transition disabled:opacity-50 text-sm touch-manipulation" id="print-chart-btn" disabled aria-label="Print seating chart">Print Chart</button>
@@ -154,6 +158,7 @@
               <input type="file" id="import-file" accept=".json" class="hidden" aria-label="Import seating chart" />
               <button type="button" class="w-full bg-blue-600 text-white rounded px-3 py-2 hover:bg-blue-500 active:scale-[.99] transition text-sm touch-manipulation" id="import-btn" aria-label="Load seating chart">Load Seating Chart</button>
             </label>
+            <button class="w-full bg-red-600 text-white rounded px-3 py-2 hover:bg-red-500 active:scale-[.99] transition text-sm touch-manipulation" id="clear-all-btn" aria-label="Clear all seat assignments">🗑️ Clear All Assignments</button>
           </div>
         </div>
       </section>
