feat: Session 4 - Enhanced theme selector, typography, and print buttons

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
           </details>
           
           <div class="flex flex-col gap-2">
-            <button class="print-btn bg-emerald-600 text-white rounded px-3 py-2 hover:bg-emerald-500 active:scale-[.99] transition disabled:opacity-50 text-sm touch-manipulation" id="print-chart-btn" disabled aria-label="Print seating chart">Print Chart</button>
-            <button class="print-btn bg-emerald-600 text-white rounded px-3 py-2 hover:bg-emerald-500 active:scale-[.99] transition disabled:opacity-50 text-sm touch-manipulation" id="print-tags-btn" disabled aria-label="Print name tags">Print Tags</button>
-            <button class="print-btn bg-emerald-700 text-white rounded px-3 py-2 hover:bg-emerald-600 active:scale-[.99] transition disabled:opacity-50 text-sm touch-manipulation" id="print-icons-btn" disabled aria-label="Print bench icons">Print Bench Icons</button>
+            <button class="print-btn bg-emerald-600 text-white rounded-lg px-4 py-3 hover:bg-emerald-500 active:scale-[.99] transition disabled:opacity-50 text-base font-medium touch-manipulation shadow-sm" id="print-chart-btn" disabled aria-label="Print seating chart">🖨️ Print Chart</button>
+            <button class="print-btn bg-emerald-600 text-white rounded-lg px-4 py-3 hover:bg-emerald-500 active:scale-[.99] transition disabled:opacity-50 text-base font-medium touch-manipulation shadow-sm" id="print-tags-btn" disabled aria-label="Print name tags">🏷️ Print Tags</button>
+            <button class="print-btn bg-emerald-700 text-white rounded-lg px-4 py-3 hover:bg-emerald-600 active:scale-[.99] transition disabled:opacity-50 text-base font-medium touch-manipulation shadow-sm" id="print-icons-btn" disabled aria-label="Print bench icons">🎨 Print Bench Icons</button>
           </div>
           
           <!-- Export/Import Section -->
