feat: Session 5 - Color picker layout and modal improvements

--- a/index.html
+++ b/index.html
@@ -164,25 +164,25 @@
       </section>
 
       <!-- Grade Color Legend -->
-      <section class="space-y-2 order-5" aria-labelledby="grade-legend-heading">
-        <h2 id="grade-legend-heading" class="font-semibold">Grade Color Legend</h2>
-        <form id="grade-color-legend" class="grid grid-cols-2 gap-2 text-sm" aria-label="Grade color legend">
-          <label for="color-pk">PK <input id="color-pk" type="color" name="PK" value="#FFD966" /></label>
-          <label for="color-kg">KG <input id="color-kg" type="color" name="KG" value="#C9DAF8" /></label>
-          <label for="color-01">01 <input id="color-01" type="color" name="01" value="#D9EAD3" /></label>
-          <label for="color-02">02 <input id="color-02" type="color" name="02" value="#F4CCCC" /></label>
-          <label for="color-03">03 <input id="color-03" type="color" name="03" value="#EAD1DC" /></label>
-          <label for="color-04">04 <input id="color-04" type="color" name="04" value="#FFF2CC" /></label>
-          <label for="color-05">05 <input id="color-05" type="color" name="05" value="#D0E0E3" /></label>
-          <label for="color-06">06 <input id="color-06" type="color" name="06" value="#FDE68A" /></label>
-          <label for="color-07">07 <input id="color-07" type="color" name="07" value="#A7F3D0" /></label>
-          <label for="color-08">08 <input id="color-08" type="color" name="08" value="#FCA5A5" /></label>
-          <label for="color-09">09 <input id="color-09" type="color" name="09" value="#C4B5FD" /></label>
-          <label for="color-10">10 <input id="color-10" type="color" name="10" value="#FBCFE8" /></label>
-          <label for="color-11">11 <input id="color-11" type="color" name="11" value="#F9A8D4" /></label>
-          <label for="color-12">12 <input id="color-12" type="color" name="12" value="#A3E635" /></label>
+      <section class="space-y-3 order-5" aria-labelledby="grade-legend-heading">
+        <h2 id="grade-legend-heading" class="font-semibold text-base">🎨 Grade Color Legend</h2>
+        <form id="grade-color-legend" class="grid grid-cols-2 gap-3 text-sm" aria-label="Grade color legend">
+          <label for="color-pk" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">PK</span><input id="color-pk" type="color" name="PK" value="#FFD966" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-kg" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">KG</span><input id="color-kg" type="color" name="KG" value="#C9DAF8" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-01" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">01</span><input id="color-01" type="color" name="01" value="#D9EAD3" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-02" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">02</span><input id="color-02" type="color" name="02" value="#F4CCCC" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-03" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">03</span><input id="color-03" type="color" name="03" value="#EAD1DC" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-04" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">04</span><input id="color-04" type="color" name="04" value="#FFF2CC" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-05" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">05</span><input id="color-05" type="color" name="05" value="#D0E0E3" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-06" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">06</span><input id="color-06" type="color" name="06" value="#FDE68A" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-07" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">07</span><input id="color-07" type="color" name="07" value="#A7F3D0" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-08" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">08</span><input id="color-08" type="color" name="08" value="#FCA5A5" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-09" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">09</span><input id="color-09" type="color" name="09" value="#C4B5FD" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-10" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">10</span><input id="color-10" type="color" name="10" value="#FBCFE8" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-11" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">11</span><input id="color-11" type="color" name="11" value="#F9A8D4" class="w-10 h-10 rounded cursor-pointer" /></label>
+          <label for="color-12" class="flex items-center gap-2 cursor-pointer"><span class="w-8 text-center font-medium">12</span><input id="color-12" type="color" name="12" value="#A3E635" class="w-10 h-10 rounded cursor-pointer" /></label>
         </form>
-        <p class="text-xs text-slate-500">Click a color to change how seats are highlighted for each grade.</p>
+        <p class="text-xs text-slate-600 leading-relaxed">💡 Click a color to customize grade highlights</p>
       </section>
     </aside>
 
